仪表盘ui功能追加
